The use of  preferred prefixes and new ontology descrptions for BEO and MEP.