@@ -1,3 +1,3 @@
-java -Xms24G -Xmx24G -XX:MaxPermSize=1G -jar IFCtoLBD_Desktop_Java8-1.81.jar
+java -Xms24G -Xmx24G -jar IFCtoLBD_Desktop_Java8-1.82.jar
 pause
 
